# dockerfiles

./: .gitignore  README.md  build.sh  docker-bake.hcl  remote.hcl
benchtool/: Dockerfile  benchmark.sh
cmcp/: Dockerfile
filebot/: Dockerfile  hardlink-remove  settings
go-ci/: Dockerfile  settings
hp-netperf/: Dockerfile
hyper-server/: Cargo.toml  Dockerfile  settings
hyper-server/src/: main.rs  server.rs
identity/: Dockerfile  docker-bake.hcl  service.py
kubectl/: Dockerfile  settings
netperf/: Dockerfile
nettools/: Dockerfile  bashrc  settings
protodep/: Dockerfile  settings
rust-amd64-amd64/: Dockerfile
rust-amd64-arm64/: Dockerfile
scuttle-shell/: Dockerfile
shell/: Dockerfile  bashrc  inputrc  settings
subliminal/: Dockerfile
tailscale/: Dockerfile  README.md  proxy.pac  settings  start.sh
wrk2/: Dockerfile
