[package]
name = "hyper-server"
version = "0.0.3"
edition = "2018"
authors = []

[[bin]]
name = "hyper-server"
path = "src/main.rs"

[dependencies]
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
libc = "0.2"
log = "0.4"
tokio = {"version"= "1", features=["rt-multi-thread", "macros"]}
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
