[package]
name = "hyper-server"
version = "0.0.3"
edition = "2024"
authors = []

[[bin]]
name = "hyper-server"
path = "src/main.rs"

[dependencies]
futures = "0.3"
http-body-util = "0.1.1"
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1.14", features = ["tokio", "server", "server-auto"] }
libc = "0.2"
log = "0.4"
ppp = "2.3"
tokio = {"version"= "1", features=["rt-multi-thread", "macros", "net"]}
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
